# trilinos-tutorial

./: do-configure.anselm.sh  do-configure.fuji.sh
00-init/source/: CMakeLists.txt  main.cpp
01-create-vector/source/: main.cpp
02-create-matrix/source/: CMakeLists.txt  main.cpp
03-solve-belos/source/: CMakeLists.txt  main.cpp
04-solve-with-prec/source/: CMakeLists.txt  main.cpp
05-nonlinear/source/: CMakeLists.txt  main.cpp
