CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

PROJECT(MyProject CXX)

FIND_PACKAGE(Trilinos REQUIRED)

INCLUDE_DIRECTORIES(SYSTEM
                    ${Trilinos_INCLUDE_DIRS})

SET(MY_EXECUTABLE "myexec")
ADD_EXECUTABLE(${MY_EXECUTABLE} "main.cpp")
TARGET_LINK_LIBRARIES(${MY_EXECUTABLE}
                      ${Epetra_LIBRARIES}
                      ${Teuchos_LIBRARIES})
